objects/MedProSC__MedPro_TestCustomChildObjectA__c.object
<CustomObject>
    <description>A transient custom object used by the MedPro Search Connector&apos;s suite of Apex Test Classes</description>
    <fields>
        <fullName>MedProSC__AMA_Designation__c</fullName>
        <label>AMA Designation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedProID__c</fullName>
        <label>MedProID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MedProSC__NPI_Number__c</fullName>
        <label>NPI Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__ParentRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentRecord</label>
        <referenceTo>MedProSC__MedPro_TestCustomObject1__c</referenceTo>
        <relationshipLabel>MedPro_TestCustomChildObjectA</relationshipLabel>
        <relationshipName>MedPro_TestCustomChildObjectA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProSC__SLN_Specialty__c</fullName>
        <label>SLN Specialty</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__State_License_Number__c</fullName>
        <label>State License Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameC1D1__c</fullName>
        <label>fieldNameC1D1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameC1D2__c</fullName>
        <label>fieldNameC1D2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__fieldNameC1D3__c</fullName>
        <label>fieldNameC1D3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>MedPro_TestCustomChildObjectA</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>MedPro_TestCustomChildObjectA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MedPro_TestCustomChildObjectA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>